--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,11 +9,6 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
 
-    # アプリがリポジトリ直下にある前提。サブフォルダなら "./app" に変えてね
-    defaults:
-      run:
-        working-directory: .
-
     steps:
       - uses: actions/checkout@v4
 
@@ -29,7 +24,6 @@ jobs:
         run: npm run build
         env:
           CI: false
-          # ← CRAはビルド時に環境変数を埋め込む。Secretsに入れてあれば有効化される
           REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
           REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
           REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
@@ -37,7 +31,7 @@ jobs:
 
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
-
+        with:                      # ← これが必須！
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_MARIOKART_846FF }}
           channelId: live
